<resources>
    <string name="app_name">WanAndroid</string>
    <string name="splash_tv_info">WanAndroid\n努力做一个Android开发者必看的网站</string>
    <string name="tab_home">首页</string>
    <string name="tab_tree">体系</string>
    <string name="tab_navigation">导航</string>
    <string name="tab_project">项目</string>
    <string name="tab_mine">我的</string>

    <string name="status_error">出错，点击重试</string>
    <string name="status_empty">页面数据为空</string>
    <string name="status_net_error">网络出错，点击重试</string>
</resources>
