<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_tab_home"
        android:enabled="true"
        android:icon="@drawable/tab_home"
        android:title="@string/tab_home"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_tab_tree"
        android:enabled="true"
        android:icon="@drawable/tab_tree"
        android:title="@string/tab_tree"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_tab_navigation"
        android:enabled="true"
        android:icon="@drawable/tab_navigation"
        android:title="@string/tab_navigation"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_tab_project"
        android:enabled="true"
        android:icon="@drawable/tab_project"
        android:title="@string/tab_project"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_tab_mine"
        android:enabled="true"
        android:icon="@drawable/tab_mine"
        android:title="@string/tab_mine"
        app:showAsAction="ifRoom|withText"/>


</menu>